envoy.yaml
admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: listener_main_service
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8081
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: grpc_json_transcoder
                route_config:
                  virtual_hosts:
                    - name: main_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: main_service
                          decorator:
                            operation: "transcoding"
                      typed_per_filter_config:
                        envoy.filters.http.cors:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                          allow_origin_string_match:
                            - prefix: "*"
                          allow_methods: "GET, POST, PUT, DELETE, OPTIONS"
                          allow_headers: "content-type, authorization"
                          expose_headers: "x-custom-header"
                          max_age: "86400"
                          allow_credentials: true
                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        my_jwt_provider:
                          issuer: "127.0.0.1"
                          local_jwks:
                            inline_string: |
                              {
                                "keys": [
                                  {
                                    "kty": "RSA",
                                    "alg": "RS256",
                                    "use": "sig",
                                    "n": "sqeJGov8nTaxpcqKnjOlt2_6YgBdm9vPX67brfmEY--M4mn7Tbt_Q76hDk44CvLvFll7amwO763rA5m9mQDTgmK57_E7zaF4T2A2B0xqg8V_f6EG5G9lBmtwqHX4mDW8B4ZKXX9KYzVK6wndoJsRu1rq1FmZMeapDpjXL1Rb0DVP9ZPxnvGDhVBxA83lzUhIRBX3_2CwrCrET9nCEDOAer7U9xKz-oVbXyuCvUwYCJPN02gOV_sBjHrW2T09bEsUW6s-vLspv9AVC5sjYduhAVrqmh1RGhZOPziwwa1DmvO5z_qEdDawSOki7dU8zxZQ5cX18BzkXZjuwhjQYP9vlw",
                                    "e": "AQAB"
                                  }
                                ]
                              }
                          forward: true
                          payload_in_metadata: "jwt_payload"
                          from_cookies:
                            - token
                      rules:
                        # Public routes - không cần JWT
                        - match:
                            path: "/api/v1/users/login"
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: "POST"
                          requires: {}

                        - match:
                            path: "/api/v1/users/register"
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: "POST"
                          requires: {}

                        - match:
                            path: "/api/v1/users/verify"
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: "POST"
                          requires: {}

                        - match:
                            path: "/api/v1/users/resend-otp"
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: "POST"
                          requires: {}

                        - match:
                            path: "/api/v1/users/logout"
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: "POST"
                          requires: {}

                        - match:
                            path: "/api/v1/users"
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: "POST"
                          requires: {}

                        # Private route
                        - match:
                            prefix: "/"
                          requires:
                            provider_name: "my_jwt_provider"
                  - name: envoy.filters.http.rbac
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC
                      rules:
                        action: ALLOW
                        policies:
                          "public-routes-policy":
                            permissions:
                              - or_rules:
                                  rules:
                                    - and_rules:
                                        rules:
                                          - header:
                                              name: ":method"
                                              string_match:
                                                exact: "POST"
                                          - url_path:
                                              path:
                                                exact: "/api/v1/users/login"
                                    - and_rules:
                                        rules:
                                          - header:
                                              name: ":method"
                                              string_match:
                                                exact: "POST"
                                          - url_path:
                                              path:
                                                exact: "/api/v1/users/register"
                                    - and_rules:
                                        rules:
                                          - header:
                                              name: ":method"
                                              string_match:
                                                exact: "POST"
                                          - url_path:
                                              path:
                                                exact: "/api/v1/users/verify"
                                    - and_rules:
                                        rules:
                                          - header:
                                              name: ":method"
                                              string_match:
                                                exact: "POST"
                                          - url_path:
                                              path:
                                                exact: "/api/v1/users/resend-otp"
                                    - and_rules:
                                        rules:
                                          - header:
                                              name: ":method"
                                              string_match:
                                                exact: "POST"
                                          - url_path:
                                              path:
                                                exact: "/api/v1/users/logout"
                                    - and_rules:
                                        rules:
                                          - header:
                                              name: ":method"
                                              string_match:
                                                exact: "POST"
                                          - url_path:
                                              path:
                                                exact: "/api/v1/users"
                            principals:
                              - any: true

                          "verified-users-policy":
                            permissions:
                              - not_rule:
                                  or_rules:
                                    rules:
                                      - url_path:
                                          path:
                                            exact: "/api/v1/users/login"
                                      - url_path:
                                          path:
                                            exact: "/api/v1/users/register"
                                      - url_path:
                                          path:
                                            exact: "/api/v1/users/verify"
                                      - url_path:
                                          path:
                                            exact: "/api/v1/users/resend-otp"
                                      - url_path:
                                          path:
                                            exact: "/api/v1/users/logout"
                                      - and_rules:
                                          rules:
                                            - header:
                                                name: ":method"
                                                string_match:
                                                  exact: "POST"
                                            - url_path:
                                                path:
                                                  exact: "/api/v1/users"
                            principals:
                              - metadata:
                                  filter: "envoy.filters.http.jwt_authn"
                                  path:
                                    - key: "jwt_payload"
                                    - key: "isVerified"
                                  value:
                                    string_match:
                                      exact: "true"

                  - name: envoy.filters.http.lua
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                      inline_code: |
                        function envoy_on_response(response_handle)
                          local token = response_handle:headers():get("authorization")
                          if token then
                            response_handle:headers():add("Set-Cookie", "token=" .. token .. "; Path=/; HttpOnly; SameSite=Lax")
                          end
                        end
                  - name: envoy.filters.http.grpc_json_transcoder
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                      proto_descriptor: "/etc/envoy/proto.pb"
                      services:
                        [
                          "project_service.UserService",
                          "project_service.SprintService",
                          "project_service.ProjectService",
                          "project_service.IssueService",
                          "project_service.ProjectMemberService",
                          "project_service.CommentService",
                          "project_service.ProjectTeamService",
                          "project_service.MetadataService",
                        ]
                      convert_grpc_status: true
                      print_options:
                        always_print_primitive_fields: true
                        preserve_proto_field_names: true
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    - name: listener_notification_service
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8082
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ws_gateway
                codec_type: AUTO
                upgrade_configs:
                  - upgrade_type: websocket
                route_config:
                  name: ws_route
                  virtual_hosts:
                    - name: ws_host
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: notification_service
                      typed_per_filter_config:
                        envoy.filters.http.cors:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                          allow_origin_string_match:
                            - prefix: "*"
                          allow_methods: "GET, POST, PUT, DELETE, OPTIONS"
                          allow_headers: "content-type, authorization"
                          expose_headers: "x-custom-header"
                          max_age: "86400"
                          allow_credentials: true
                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        my_jwt_provider:
                          issuer: "grpc_server"
                          local_jwks:
                            inline_string: |
                              {
                                "keys": [
                                  {
                                    "kty": "RSA",
                                    "alg": "RS256",
                                    "use": "sig",
                                    "n": "sqeJGov8nTaxpcqKnjOlt2_6YgBdm9vPX67brfmEY--M4mn7Tbt_Q76hDk44CvLvFll7amwO763rA5m9mQDTgmK57_E7zaF4T2A2B0xqg8V_f6EG5G9lBmtwqHX4mDW8B4ZKXX9KYzVK6wndoJsRu1rq1FmZMeapDpjXL1Rb0DVP9ZPxnvGDhVBxA83lzUhIRBX3_2CwrCrET9nCEDOAer7U9xKz-oVbXyuCvUwYCJPN02gOV_sBjHrW2T09bEsUW6s-vLspv9AVC5sjYduhAVrqmh1RGhZOPziwwa1DmvO5z_qEdDawSOki7dU8zxZQ5cX18BzkXZjuwhjQYP9vlw",
                                    "e": "AQAB"
                                  }
                                ]
                              }
                          forward: true
                          payload_in_metadata: "jwt_payload"
                          from_cookies:
                            - token
                      rules:
                        # Private route
                        - match:
                            prefix: "/"
                          requires:
                            provider_name: "my_jwt_provider"
                  - name: envoy.filters.http.rbac
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC
                      rules:
                        action: ALLOW
                        policies:
                          "all-access-policy":
                            permissions:
                              - any: true
                            principals:
                              - any: true
                  - name: envoy.filters.http.lua
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                      inline_code: |
                        function envoy_on_response(response_handle)
                          local token = response_handle:headers():get("authorization")
                          if token then
                            response_handle:headers():add("Set-Cookie", "token=" .. token .. "; Path=/; HttpOnly; Secure; SameSite=None")
                          end
                        end
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: main_service
      type: LOGICAL_DNS
      connect_timeout: 5s
      lb_policy: ROUND_ROBIN
      # Cách mới để cấu hình HTTP/2 (thay thế http2_protocol_options: {})
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: main_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: grpc_service
                      port_value: 5001

    - name: notification_service
      type: LOGICAL_DNS
      connect_timeout: 5s
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: notification_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: notification_service
                      port_value: 5002
